--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "caniuse-lite": "^1.0.30001418",
     "canvas": "^2.9.1",
     "fs": "0.0.1-security",
     "next": "12.1.4",
@@ -24,15 +25,15 @@
   "main": "next.config.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/amino19/gitorbit.git"
+    "url": "git+https://github.com/aminoxix/gitorbit.git"
   },
   "keywords": [
     "gitorbit"
   ],
-  "author": "amino19",
+  "author": "aminoxix",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/amino19/gitorbit/issues"
+    "url": "https://github.com/aminoxix/gitorbit/issues"
   },
-  "homepage": "https://github.com/amino19/gitorbit#readme"
+  "homepage": "https://github.com/aminoxix/gitorbit#readme"
 }
