--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,16 @@
 {
   "conventionalCommits.promptFooter": false,
   "conventionalCommits.promptScopes": false,
-  "cSpell.words": ["devstrons"],
+  "cSpell.words": ["devstrons", "gitorbit"],
+  "explorer.sortOrder": "type",
+  "explorer.sortOrderLexicographicOptions": "lower",
   "javascript.format.semicolons": "remove",
-  "typescript.format.semicolons": "remove"
+  "tailwindCSS.experimental.classRegex": [
+    ["Classes ?\\=([^;]*)", "'([^']*)'"],
+    ["Classes ?\\=([^;]*)", "\"([^\"]*)\""],
+    ["Classes ?\\=([^;]*)", "\\`([^\\`]*)\\`"]
+  ],
+  "typescript.enablePromptUseWorkspaceTsdk": true,
+  "typescript.format.semicolons": "remove",
+  "typescript.tsdk": "./node_modules/typescript/lib"
 }
