--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@devstrons/git-or-bit",
+  "name": "@devstrons/gitorbit",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,10 +9,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.3",
+    "@hookform/resolvers": "^2.9.8",
+    "@next/font": "^13.0.2",
     "@tanstack/react-query": "^4.10.3",
-    "next": "12.3.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^13.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.37.0",
     "zod": "^3.18.0"
   },
   "devDependencies": {
@@ -24,7 +28,7 @@
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
-    "tailwindcss": "^3.1.6",
+    "tailwindcss": "^3.2.1",
     "typescript": "^4.8.4"
   },
   "ct3aMetadata": {
